--- a/bookstore/src/App.css
+++ b/bookstore/src/App.css
@@ -2,6 +2,24 @@
   text-align: center;
 }
 
+.nav-bar {
+  display: inline;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+li {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  float: left;
+}
+
 
 
 
